// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyser renders correctly 1`] = `
<Analyser
  audio={Object {}}
  isPlaying={false}
>
  <canvas
    className="canvas"
  />
</Analyser>
`;

exports[`Analyser renders correctly 2`] = `
<Analyser
  audio={Object {}}
  isPlaying={true}
>
  <canvas
    className="canvas"
  />
</Analyser>
`;

exports[`Analyser renders correctly 3`] = `
<Analyser
  audio={Object {}}
  isPlaying={false}
>
  <canvas
    className="canvas"
  />
</Analyser>
`;

exports[`Analyser renders correctly 4`] = `
<Analyser
  audio={Object {}}
  isPlaying={true}
  mode="waveform"
>
  <canvas
    className="canvas"
  />
</Analyser>
`;
